--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,207 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-thumb {
+  background: rgba(210, 210, 210, 0.8);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.line {
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  padding-bottom: 20px;
+  width: 100%;
+  height: auto;
+  position: sticky;
+  top: 50px;
+  z-index: 999;
+}
+.line2 {
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 15px 8px;
+}
+nav {
+  position: sticky;
+  top: 140px;
+}
+.line3 {
+  padding: 15px 8px;
+}
+
+.icon {
+  color: #000 !important;
+  position: absolute;
+  right: 14px;
+  top: 5px;
+  font-size: 18px;
+}
+
+.form-control {
+  padding: 2px 6px !important;
+  font-size: 0.8rem !important;
+}
+.btn {
+  position: relative;
+  width: 100%;
+  color: #000 !important;
+  background: white !important;
+  outline: none !important;
+  border-color: rgba(0, 0, 0, 0.2) !important;
+  padding: 5px !important;
+  font-size: 0.7rem !important;
+}
+.b1 {
+  text-indent: 32px;
+}
+.b1::before {
+  content: '';
+  position: absolute;
+  top: 3px;
+  left: 7px;
+  background: #dc3545;
+  height: 20px;
+  width: 20px;
+  border-radius: 5px;
+}
+.btn:focus {
+  outline: none !important;
+  box-shadow: 0 0 0 white !important;
+}
+.buttons > button {
+  outline: none;
+  border: none;
+  background: #d9e4dd;
+  margin: 0 4px;
+  border-radius: 5px;
+}
+.buttuns2 {
+  position: absolute;
+  top: 0;
+  right: 15px;
+  font-size: 0.8rem;
+}
+.buttuns2 i {
+  color: #000 !important;
+  font-size: 0.8rem;
+  padding: 8px;
+}
+.buttuns2 > .btn1 {
+  outline: none;
+  border: none;
+  border-radius: 4px;
+  margin: 0 5px;
+}
+/* flex start styling */
+.flex {
+  width: 100%;
+  display: inline-flex;
+  align-items: center;
+}
+.flex2 {
+  width: 100%;
+  display: inline-flex;
+  justify-content: space-between;
+}
+
+.appStore {
+  background: #d9e4dd;
+  border-radius: 8px;
+  padding: 0px 6px;
+}
+.reviews > a {
+  color: #000 !important;
+  /* font-weight: 500; */
+  cursor: pointer;
+  text-decoration: none !important;
+}
+.name {
+  padding: 0 15px;
+}
+.jumbotron {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  background: transparent !important;
+}
+.bg-danger {
+  border-radius: 5px;
+  width: 20px;
+  height: 20px;
+  margin-right: 12px;
+}
+i {
+  color: #cdb30c;
+  font-weight: 800;
+  padding: 0 2px;
+}
+.viewingReviews {
+  width: 100%;
+  position: relative;
+  margin-bottom: 1.5rem;
+}
+.pagination {
+  flex-wrap: wrap;
+}
+.pagination li {
+  margin: 5px 5px;
+}
+
+@media (max-width: 400px) {
+  .buttuns2 > .btn1 {
+    margin: 5px 0;
+    width: 100%;
+  }
+  .flex2 {
+    display: block;
+  }
+  .buttons > button {
+    margin: 5px 0;
+    width: 100%;
+  }
+  .jumbotron {
+    padding: 1.5rem 1rem;
+  }
+  .fa,
+  .far,
+  .fas {
+    font-size: 0.8rem;
+  }
+  .flex,
+  .flex2 {
+    font-size: 0.7rem !important;
+  }
+}
+@media (min-width: 576px) {
+  .jumbotron {
+    padding: 2rem 1rem !important;
+  }
+}
+@media (max-width: 768px) {
+  .line,
+  nav {
+    position: relative;
+    top: 0;
+  }
+  .buttuns2 {
+    position: static;
+  }
+  .flex,
+  .flex2 {
+    font-size: 0.8rem !important;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+  .break-point-icon {
+    right: 0px;
+  }
 }
