--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,24 @@ body {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
+.dropdown-menu {
+  width: 100%;
+}
+#dropdown-basic-button {
+  text-indent: 25px;
+  text-align: left;
+}
+#dropdown-edit {
+  text-align: left;
+}
+
+.dropdown-toggle::after {
+  margin-left: 0 !important;
+  position: absolute;
+  top: 12px;
+  right: 12px;
+}
+
 .line {
   border-right: 1px solid rgba(0, 0, 0, 0.1);
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
@@ -39,14 +57,6 @@ nav {
   padding: 15px 8px;
 }
 
-.icon {
-  color: #000 !important;
-  position: absolute;
-  right: 14px;
-  top: 5px;
-  font-size: 18px;
-}
-
 .form-control {
   padding: 2px 6px !important;
   font-size: 0.8rem !important;
@@ -61,14 +71,12 @@ nav {
   padding: 5px !important;
   font-size: 0.7rem !important;
 }
-.b1 {
-  text-indent: 32px;
-}
 .b1::before {
   content: '';
   position: absolute;
-  top: 3px;
-  left: 7px;
+  top: 4px;
+  left: 5px;
+  z-index: 1;
   background: #dc3545;
   height: 20px;
   width: 20px;
@@ -111,6 +119,7 @@ nav {
 .flex2 {
   width: 100%;
   display: inline-flex;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -119,18 +128,24 @@ nav {
   border-radius: 8px;
   padding: 0px 6px;
 }
+.reviews {
+  display: flex;
+  width: 160px;
+  justify-content: space-between;
+}
 .reviews > a {
   color: #000 !important;
   /* font-weight: 500; */
   cursor: pointer;
+  padding: 0 !important;
   text-decoration: none !important;
 }
 .name {
   padding: 0 15px;
 }
 .jumbotron {
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  background: transparent !important;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.1);
+  background: white !important;
 }
 .bg-danger {
   border-radius: 5px;
@@ -156,6 +171,12 @@ i {
 }
 
 @media (max-width: 400px) {
+  .bg-danger {
+    border-radius: 0px;
+    width: 0px;
+    height: 0px;
+    margin-right: 0px;
+  }
   .buttuns2 > .btn1 {
     margin: 5px 0;
     width: 100%;
