--- a/src/index.css
+++ b/src/index.css
@@ -17,24 +17,6 @@ body {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
-.dropdown-menu {
-  width: 100%;
-}
-#dropdown-basic-button {
-  text-indent: 25px;
-  text-align: left;
-}
-#dropdown-edit {
-  text-align: left;
-}
-
-.dropdown-toggle::after {
-  margin-left: 0 !important;
-  position: absolute;
-  top: 12px;
-  right: 12px;
-}
-
 .line {
   border-right: 1px solid rgba(0, 0, 0, 0.1);
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
@@ -42,16 +24,24 @@ body {
   width: 100%;
   height: auto;
   position: sticky;
-  top: 50px;
+  top: 0px;
   z-index: 999;
+  padding-top: 50px;
+  background: white;
 }
 .line2 {
   border-right: 1px solid rgba(0, 0, 0, 0.1);
   padding: 15px 8px;
+  height: 530px;
+  overflow-y: scroll;
+  position: sticky !important;
+  top: 96px;
 }
-nav {
-  position: sticky;
-  top: 140px;
+.line2::-webkit-scrollbar {
+  width: 8px;
+}
+.line2::-webkit-scrollbar-thumb {
+  border-radius: 5px;
 }
 .line3 {
   padding: 15px 8px;
@@ -75,11 +65,11 @@ nav {
   content: '';
   position: absolute;
   top: 4px;
-  left: 5px;
+  left: 18px;
   z-index: 1;
   background: #dc3545;
-  height: 20px;
-  width: 20px;
+  height: 18px;
+  width: 18px;
   border-radius: 5px;
 }
 .btn:focus {
@@ -96,7 +86,7 @@ nav {
 .buttuns2 {
   position: absolute;
   top: 0;
-  right: 15px;
+  right: -30px;
   font-size: 0.8rem;
 }
 .buttuns2 i {
@@ -130,7 +120,7 @@ nav {
 }
 .reviews {
   display: flex;
-  width: 300px;
+  width: 240px;
   justify-content: space-between;
 }
 .reviews > a {
@@ -174,8 +164,24 @@ i {
 .fas {
   font-size: 0.8rem;
 }
+select {
+  width: 100%;
+  outline: none !important;
+}
+#select {
+  text-indent: 20px;
+}
 
-@media (max-width: 400px) {
+@media (max-width: 768px) {
+  select {
+    margin: 10px 0 !important;
+  }
+  .b1::before {
+    top: 14px;
+  }
+}
+
+@media (max-width: 527px) {
   .buttuns2 > .btn1 {
     margin: 5px 0;
     width: 100%;
@@ -196,7 +202,7 @@ i {
     font-size: 0.7rem !important;
   }
   .reviews {
-    width: 200px;
+    width: 100%;
   }
 }
 @media (min-width: 576px) {
@@ -205,6 +211,12 @@ i {
   }
 }
 @media (max-width: 768px) {
+  .line2 {
+    position: relative !important;
+    top: 0;
+    overflow: hidden;
+    height: auto;
+  }
   .line,
   nav {
     position: relative;
